--- a/Pages/Inscription/Inscription.html
+++ b/Pages/Inscription/Inscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
-    <link rel="stylesheet" href="inscription.css">
+    <link rel="stylesheet" href="./Inscription.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -40,6 +40,6 @@
         </div>
     </div>
 
-    <script src="inscription.js"></script>
+    <script src="./Inscription.js"></script>
 </body>
 </html>
