--- a/Pages/Contacts_Us_&_Inscription/Page_Inscription/Inscription.html
+++ b/Pages/Contacts_Us_&_Inscription/Page_Inscription/Inscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="./Contact_Us.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -79,6 +79,6 @@
         </div>
     </div>
 
-    <script src="contact.js"></script>
+    <script src="./Contact_Us.js"></script>
 </body>
 </html>
