--- a/Pages/Contacts_Us_&_Inscription/Connexion.html
+++ b/Pages/Contacts_Us_&_Inscription/Connexion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
-    <link rel="stylesheet" href="./Inscription.css">
+    <link rel="stylesheet" href="./Connexion_Us_&_Inscription_CSS/Connexion.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -35,11 +35,11 @@
                 <button type="submit" class="auth-button">Se connecter</button>
             </form>
 
-            <!-- Lien vers l'inscription -->
-            <p class="auth-link">Pas encore de compte ? <a href="inscription.html">S'inscrire</a></p>
+           
+            <p class="auth-link">Pas encore de compte ? <a href="./Page_Inscription/Inscription.html">S'inscrire</a></p>
         </div>
     </div>
 
-    <script src="./Inscription.js"></script>
+    <script src="./Connexion_Us_&_Inscription_JSS/Connexion.js"></script>
 </body>
 </html>
