--- a/Pages/Contacts_Us_&_Inscription/Page_Inscription/Inscription.html
+++ b/Pages/Contacts_Us_&_Inscription/Page_Inscription/Inscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
-    <link rel="stylesheet" href="./Contact_Us.css">
+    <link rel="stylesheet" href="../Connexion_Us_&_Inscription_CSS/Inscription.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -71,14 +71,13 @@
                 <button type="submit" class="auth-button">S'inscrire</button>
             </form>
 
-            <!-- Lien vers la connexion -->
-            <p class="auth-link">Déjà un compte ? <a href="inscription.html">Se connecter</a></p>
+            <p class="auth-link">Déjà un compte ? <a href="../Connexion.html">Se connecter</a></p>
         </div>
         <div class="loading-overlay" id="loading-overlay">
             <div class="loading-spinner"></div>
         </div>
     </div>
 
-    <script src="./Contact_Us.js"></script>
+    <script src="../Connexion_Us_&_Inscription_JSS/Inscription.js"></script>
 </body>
 </html>
