--- a/index.html
+++ b/index.html
@@ -310,18 +310,18 @@
                 <div class="footer-column quick-links">
                     <h3>Liens rapides</h3>
                     <ul>
-                        <li><a href="#">Accueil</a></li>
+                        <li><a href="./index.html">Accueil</a></li>
                         <li><a href="#">À propos</a></li>
-                        <li><a href="#">Nos produits</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./Pages/Nos_Produits/Nos_Produits.html">Nos produits</a></li>
+                        <li><a href="./Pages/Contact_Us/Contact_Us.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-column cta-links">
                     <h3>Nos services</h3>
                     <ul>
-                        <li><a href="#">Commander</a></li>
+                        <li><a href="./Pages/Nos_Produits/Nos_Produits.html">Commander</a></li>
                         <li><a href="#">Nos magasins</a></li>
-                        <li><a href="#">Mon compte</a></li>
+                        <li><a href="./Pages/Contacts_Us_&_Inscription/Connexion.html">Mon compte</a></li>
                     </ul>
                 </div>
                 <div class="footer-column socials">
