--- a/Pages/Nos_Produits/Nos_Produits.html
+++ b/Pages/Nos_Produits/Nos_Produits.html
@@ -19,9 +19,9 @@
             </div>
             <div class="nav-left">
                 <ul class="links">
-                    <li><a href="#">Nos produits</a></li>
+                    <li><a href="./Nos_Produits.html">Nos produits</a></li>
                     <li><a href="#">À propos</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="../Contact_Us/Contact_Us.html">Contact Us</a></li>
                 </ul>
                 <script>
                     window.onload = function() {
@@ -37,14 +37,14 @@
                 <img src="./Animation_&_System_JS/Images_For_JS_Animations/Logo_Bakery_Mini.png" alt="logo" class="nav-logo-full logo" />
             </div>
             <div class="nav-right">
-                <a href="contact.html"><button class="action_btn notcart">Commander</button></a>
+                <a href="./Nos_Produits.html"><button class="action_btn notcart">Commander</button></a>
                 <a href="" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="#000000" viewBox="0 0 256 256">
                         <path
                             d="M128,64a40,40,0,1,0,40,40A40,40,0,0,0,128,64Zm0,64a24,24,0,1,1,24-24A24,24,0,0,1,128,128Zm0-112a88.1,88.1,0,0,0-88,88c0,31.4,14.51,64.68,42,96.25a254.19,254.19,0,0,0,41.45,38.3,8,8,0,0,0,9.18,0A254.19,254.19,0,0,0,174,200.25c27.45-31.57,42-64.85,42-96.25A88.1,88.1,0,0,0,128,16Zm0,206c-16.53-13-72-60.75-72-118a72,72,0,0,1,144,0C200,161.23,144.53,209,128,222Z">
                         </path>
                     </svg></a>
-                <a href="contact.html" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                <a href="../Connexion_Us_&_Inscription/Connexion.html" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="#000000" viewBox="0 0 256 256">
                         <path
                             d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z">
@@ -80,14 +80,14 @@
                 <img src="./Animation_&_System_JS/Images_For_JS_Animations/Logo_Bakery_Mini.png" alt="logo" class="nav-logo-mini logo" />
             </div>
             <div class="nav-right">
-                <a href=""><button class="action_btn notcart">Commander</button></a>
+                <a href="./Nos_Produits.html"><button class="action_btn notcart">Commander</button></a>
                 <a href="" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="#000000" viewBox="0 0 256 256">
                         <path
                             d="M128,64a40,40,0,1,0,40,40A40,40,0,0,0,128,64Zm0,64a24,24,0,1,1,24-24A24,24,0,0,1,128,128Zm0-112a88.1,88.1,0,0,0-88,88c0,31.4,14.51,64.68,42,96.25a254.19,254.19,0,0,0,41.45,38.3,8,8,0,0,0,9.18,0A254.19,254.19,0,0,0,174,200.25c27.45-31.57,42-64.85,42-96.25A88.1,88.1,0,0,0,128,16Zm0,206c-16.53-13-72-60.75-72-118a72,72,0,0,1,144,0C200,161.23,144.53,209,128,222Z">
                         </path>
                     </svg></a>
-                <a href="contact.html" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                <a href="../Connexion_Us_&_Inscription/Connexion.html" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="#000000" viewBox="0 0 256 256">
                         <path
                             d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z">
@@ -386,18 +386,18 @@
         <div class="footer-column quick-links">
             <h3>Liens rapides</h3>
             <ul>
-                <li><a href="#">Accueil</a></li>
+                <li><a href="../../index.html">Accueil</a></li>
                 <li><a href="#">À propos</a></li>
-                <li><a href="#">Nos produits</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./Nos_Produits.html">Nos produits</a></li>
+                <li><a href="../Contact_Us/Contact_Us.html">Contact</a></li>
             </ul>
         </div>
         <div class="footer-column cta-links">
             <h3>Nos services</h3>
             <ul>
-                <li><a href="#">Commander</a></li>
-                <li><a href="#">Nos magasins</a></li>
-                <li><a href="#">Mon compte</a></li>
+                <li><a href="./Nos_Produits.html">Commander</a></li>
+                <li><a href="./Nos_Produits.html">Nos magasins</a></li>
+                <li><a href="../Connexion_Us_&_Inscription/Connexion.html">Mon compte</a></li>
             </ul>
         </div>
         <div class="footer-column socials">
