--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     class="nav-logo-full logo" />
             </div>
             <div class="nav-right">
-                <a href="#"><button class="action_btn notcart">Commander</button></a>
+                <a href="./Pages/Nos_Produits/Nos_Produits.html"><button class="action_btn notcart">Commander</button></a>
                 <a href="#" class="nav-icon notcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="#000000" viewBox="0 0 256 256">
                         <path
@@ -115,7 +115,7 @@
                 chaque viennoiserie est une promesse de douceur. Laissez-vous envoûter par le parfum du pain chaud,
                 le croustillant d'une baguette dorée et la tendresse d'un croissant feuilleté.
             </p>
-            <button class="btn-hero">Découvrir nos créations</button>
+            <button class="btn-hero"><a href="./Pages/Nos_Produits/Nos_Produits.html">Découvrir nos créations</a></button>
         </div>
 
     </div>
