--- a/Pages/Connexion_Us_&_Inscription/Connexion.html
+++ b/Pages/Connexion_Us_&_Inscription/Connexion.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
 
-                <!-- Mot de passe -->
+                
                 <div class="input-group">
                     <div class="input-icon">
                         <i class="fas fa-lock"></i>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
 
-                <!-- Bouton de connexion -->
+                
                 <button type="submit" class="auth-button">Se connecter</button>
             </form>
 
@@ -39,7 +39,38 @@
             <p class="auth-link">Pas encore de compte ? <a href="./Page_Inscription/Inscription.html">S'inscrire</a></p>
         </div>
     </div>
-
+    <footer class="footer">
+        <div class="footer-top">
+            <div class="footer-column logo">
+                <img src="../Nos_Produits/Animation_&_System_JS/Images_For_JS_Animations/Logo_Bakery_Mini.png" alt="Logo" class="footer-logo logo" />
+            </div>
+            <div class="footer-column quick-links">
+                <ul class="quick-links-row">
+                    <li><a href="../../index.html">Accueil</a></li>
+                    <li><a href="#">À propos</a></li>
+                    <li><a href="./Nos_Produits.html">Nos produits</a></li>
+                    <li><a href="../Contact_Us/Contact_Us.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr class="footer-divider" />
+        <div class="footer-bottom">
+            <div class="footer-bottom-left">
+                <p>
+                    © 2025 La petite boulangerie. Tous droits réservés. |
+                    <a href="#">Conditions d'utilisation</a>
+                </p>
+            </div>
+            <div class="footer-bottom-right">
+                <a href="#top" class="back-to-top">
+                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
+                        <path d="M205.66,117.66a8,8,0,0,1-11.32,0L136,59.31V216a8,8,0,0,1-16,0V59.31L61.66,117.66a8,8,0,0,1-11.32-11.32l72-72a8,8,0,0,1,11.32,0l72,72A8,8,0,0,1,205.66,117.66Z"></path>
+                    </svg>
+                    Retour en haut
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="./Connexion_Us_&_Inscription_JSS/Connexion.js"></script>
 </body>
 </html>
